demo/haproxy-auth-gateway/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
spec:
  rules:
  - host: api.localtest.me
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: gateway
            port:
              number: 80
